--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,68 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:id="@+id/layout1"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:background="@color/colorPrimary">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:background="@color/colorPrimary"
-            >
-
-            <View
-                android:id="@+id/view1_1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="0.22" />
-            <View
-                android:id="@+id/view1_2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/colorWhite"
-                android:layout_weight="1.48"/>
-            <View
-                android:id="@+id/view1_3"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1.3"/>
-
-
-        </LinearLayout>
-    </LinearLayout>
-
-
-    <View
-        android:id="@+id/view2"
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:background="@color/colorWhite"
-        android:layout_below="@+id/layout1"/>
-
-
     <androidx.viewpager.widget.ViewPager
         android:background="@color/colorPrimary"
         android:id="@+id/mainViewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/view2"
-        android:layout_above="@+id/view3"/>
+        android:layout_above="@+id/view_main"/>
 
 
     <View
-        android:id="@+id/view3"
+        android:id="@+id/view_main"
         android:layout_width="match_parent"
         android:layout_height="5dp"
         android:background="@color/colorWhite"
-        android:layout_above="@+id/layout3"/>
+        android:layout_above="@+id/layout_main"/>
 
     <LinearLayout
-        android:id="@+id/layout3"
+        android:id="@+id/layout_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
