--- a/app/src/main/res/layout/activity_trash_can_row.xml
+++ b/app/src/main/res/layout/activity_trash_can_row.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/samplePhoto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:srcCompat="@drawable/sample1" />
