--- a/app/src/main/res/layout/activity_trash_can.xml
+++ b/app/src/main/res/layout/activity_trash_can.xml
@@ -3,49 +3,40 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".MainActivity">
-
-    <GridView
-        android:id="@+id/gridViewImages"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:horizontalSpacing="10dp"
-        android:numColumns="4"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:verticalSpacing="10dp"></GridView>
 
     <LinearLayout
         android:id="@+id/layout1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:background="@color/colorPrimary">
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
             android:background="@color/colorPrimary"
-            >
+            android:orientation="horizontal">
 
             <View
                 android:id="@+id/view1_1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.22" />
+
             <View
                 android:id="@+id/view1_2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/colorWhite"
-                android:layout_weight="1.48"/>
+                android:layout_weight="1.48"
+                android:background="@color/colorWhite" />
+
             <View
                 android:id="@+id/view1_3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1.3"/>
+                android:layout_weight="1.3" />
 
 
         </LinearLayout>
@@ -56,24 +47,35 @@
         android:id="@+id/view2"
         android:layout_width="match_parent"
         android:layout_height="5dp"
-        android:background="@color/colorWhite"
-        android:layout_below="@+id/layout1"/>
+        android:layout_below="@+id/layout1"
+        android:background="@color/colorWhite" />
+
+    <GridView
+        android:id="@+id/gridViewImages"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:horizontalSpacing="10dp"
+        android:numColumns="4"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:verticalSpacing="10dp"
+        android:layout_below="@id/view2"  />
 
 
     <View
         android:id="@+id/view3"
         android:layout_width="match_parent"
         android:layout_height="5dp"
-        android:background="@color/colorWhite"
-        android:layout_above="@+id/layout3"/>
+        android:background="@color/colorWhite" />
 
+    <!--
     <LinearLayout
         android:id="@+id/layout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
-        android:background="@color/colorPrimary">
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal">
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/mainTabLayout"
@@ -91,23 +93,24 @@
                 android:id="@+id/tab_SortByImage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:icon="@drawable/sort_by_image"/>
+                android:icon="@drawable/sort_by_image" />
 
             <com.google.android.material.tabs.TabItem
                 android:id="@+id/tab_trashCan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:icon="@drawable/trash_can"/>
+                android:icon="@drawable/trash_can" />
 
             <com.google.android.material.tabs.TabItem
                 android:id="@+id/tab_setting"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:icon="@drawable/setting"/>
+                android:icon="@drawable/setting" />
 
         </com.google.android.material.tabs.TabLayout>
 
 
     </LinearLayout>
+ -->
 
 </RelativeLayout>
