--- a/app/src/main/res/layout/fragment_trash_can.xml
+++ b/app/src/main/res/layout/fragment_trash_can.xml
@@ -7,6 +7,12 @@
     tools:context=".TrashCanFragment"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/samplePhoto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:srcCompat="@drawable/sample1" />
+
     <LinearLayout
         android:id="@+id/layout_trash"
         android:layout_width="match_parent"
@@ -45,16 +51,6 @@
         android:layout_height="5dp"
         android:background="@color/colorWhite"
         android:layout_below="@+id/layout_trash"/>
-
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textSize="30dp"
-        android:text="세번째화면"
-        android:gravity="center"
-        android:textColor="@color/colorWhite"
-        />
 
 
 </LinearLayout>
