--- a/app/src/main/res/layout/activity_select_photo.xml
+++ b/app/src/main/res/layout/activity_select_photo.xml
@@ -67,6 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bookmarkbtn_change"
+        android:button="@null"
         android:layout_alignRight="@id/bigImage"
         android:layout_alignTop="@id/bigImage"/>
 
