작업여러개 하다가 푸시해서 업데이트 할것이 요것저것 있습니돵 화면 잘 보면서 이것저것 잘 !!빼고!! !!추가!!하고 병합하세욜
-- 대략적으로 첫번째 화면 초안 제작 --
리스트뷰에 날짜, 사진 넣어서 제작

** 더 해야할 것
1. 사진 개수에 따른 함수 코딩 ( 개수 6개 )
2. onClickListener 사용하여 지정 사진 클릭시 고르기 페이지로 이동
3. 사진 정사각형으로 crop
4. 사용자로부터 사진정보 받아와서 날짜별로 분류 ( api 있을듯 )

--- a/app/src/main/res/layout/fragment_sort_by_time.xml
+++ b/app/src/main/res/layout/fragment_sort_by_time.xml
@@ -48,13 +48,14 @@
         android:layout_below="@+id/layout_SBT"/>
 
 
-    <TextView
+
+    <ListView
+        android:id="@+id/list_view_time"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textSize="30dp"
-        android:text="첫번째화면"
-        android:gravity="center"
-        android:textColor="@color/colorWhite"
+        android:layout_marginVertical="10dp"
         />
+
+
 
 </LinearLayout>
