--- a/app/src/main/res/layout/activity_trash_can.xml
+++ b/app/src/main/res/layout/activity_trash_can.xml
@@ -31,15 +31,13 @@
                     android:layout_weight="1" />
                 <Button
                 android:id="@+id/select_btn"
-                android:layout_width="wrap_content"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
                     android:layout_margin="2dp"
-                android:padding="5dp"
-                android:text="선택"
-                android:textSize="8pt"/>
+                    android:background="@drawable/btn_select"/>
                 <Button
                     android:id="@+id/restore_btn"
-                    android:layout_width="wrap_content"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
                     android:padding="5dp"
