오.. 바뀐게 많으니 merge 잘 해주쉐효
1. selectPhotoActivity에서 사진이 있을 경우만 실행
2. splashActivity에서 사진이 있을 경우만 파싱 진행

--- a/app/src/main/res/layout/activity_select_photo_row.xml
+++ b/app/src/main/res/layout/activity_select_photo_row.xml
@@ -23,7 +23,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:scaleType="centerCrop"
-                app:srcCompat="@drawable/sample1" />
+                app:srcCompat="@drawable/ic_mood_black_24dp" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
