--- a/app/src/main/res/layout/fragment_trash_can.xml
+++ b/app/src/main/res/layout/fragment_trash_can.xml
@@ -11,7 +11,7 @@
         android:id="@+id/samplePhoto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:srcCompat="@drawable/sample1" />
+        app:srcCompat="@drawable/ic_mood_black_24dp" />
 
     <LinearLayout
         android:id="@+id/layout_trash"
