--- a/app/src/main/res/layout/fragment_sort_by_image.xml
+++ b/app/src/main/res/layout/fragment_sort_by_image.xml
@@ -35,6 +35,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1.3"/>
 
+
         </LinearLayout>
     </LinearLayout>
 
@@ -44,20 +45,17 @@
         android:layout_width="match_parent"
         android:layout_height="5dp"
         android:background="@color/colorWhite"
-        android:layout_below="@+id/layout_SBI"/>
+        android:layout_below="@+id/layout_SBT"/>
 
-    <TextView
+
+
+    <ListView
+        android:id="@+id/list_view_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textSize="30dp"
-        android:text="두번째화면"
-        android:gravity="center"
-        android:textColor="@color/colorWhite"
+        android:layout_marginVertical="10dp"
         />
 
 
 
 </LinearLayout>
-
-
-
