--- a/app/src/main/res/layout/activity_trash_can.xml
+++ b/app/src/main/res/layout/activity_trash_can.xml
@@ -31,10 +31,11 @@
                     android:layout_height="0dp"
                     android:layout_weight="1" />
 
-                <Button
+                <CheckBox
                     android:id="@+id/select_btn"
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
+                    android:button="@null"
                     android:layout_margin="2dp"
                     android:background="@drawable/btn_select" />
 
