--- a/app/src/main/res/layout/activity_trash_can_row.xml
+++ b/app/src/main/res/layout/activity_trash_can_row.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -8,8 +8,17 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/samplePhoto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/Image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         app:srcCompat="@drawable/ic_mood_black_24dp" />
-</LinearLayout>
+
+    <CheckBox
+        android:id="@+id/CheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        />
+</RelativeLayout>
