--- a/app/src/main/res/layout/fragment_trash_can.xml
+++ b/app/src/main/res/layout/fragment_trash_can.xml
@@ -47,7 +47,7 @@
                     android:background="@drawable/restorebtn_chage" />
 
                 <Button
-                    android:id="@+id/delete_btn"
+                    android:id="@+id/delete_permanently_btn"
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
