혜지-어플리케이션 로고 적용

--- a/app/src/main/res/layout/activity_select_photo.xml
+++ b/app/src/main/res/layout/activity_select_photo.xml
@@ -45,11 +45,12 @@
                 android:layout_weight="1.48"
                 android:background="@color/colorWhite" />
 
-            <View
+            <ImageView
                 android:id="@+id/view1_3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1.3" />
+                android:layout_weight="1.3"
+                android:src="@drawable/logo_noback" />
 
 
         </LinearLayout>
