--- a/app/src/main/res/layout/fragment_sort_by_time.xml
+++ b/app/src/main/res/layout/fragment_sort_by_time.xml
@@ -30,10 +30,12 @@
                 android:layout_height="match_parent"
                 android:background="@color/colorWhite"
                 android:layout_weight="1.48"/>
-            <View
+            <ImageView
+                android:id="@+id/view1_3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1.3"/>
+                android:layout_weight="1.3"
+                android:src="@drawable/logo_noback" />
 
 
         </LinearLayout>
