--- a/app/src/main/res/layout/fragment_trash_can.xml
+++ b/app/src/main/res/layout/fragment_trash_can.xml
@@ -31,14 +31,15 @@
                     android:layout_height="0dp"
                     android:layout_weight="1" />
 
-<!--                <CheckBox-->
-<!--                    android:id="@+id/select_check"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:button="@null"-->
-<!--                    android:clickable="true"-->
-<!--                    android:layout_margin="2dp"-->
-<!--                    android:drawableLeft="@drawable/custom_selectbox" />-->
+
+                <!--<CheckBox
+                    android:id="@+id/select_check"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:button="@null"
+                    android:clickable="true"
+                    android:layout_margin="2dp"
+                    android:drawableLeft="@drawable/custom_selectbox" />-->
 
 
                 <Button
